# inventory-management-system

./: .gitignore  CMakeLists.txt  README.md
db/: schema.sql  seed.sql
src/: main.cpp
src/controller/: inventory_controller.cpp  product_controller.cpp  stock_movement_controller.cpp  user_controller.cpp
src/controller/include/: inventory_controller.h  product_controller.h  stock_movement_controller.h  user_controller.h
src/db/: database.cpp  database.h
src/models/: auth_user.h  category.h  inventory_check.h  inventory_check_item.h  product.h  role.h  stock_movement.h  supplier.h  user.h
src/repositories/: inventory_repository.cpp  product_repository.cpp  stock_movement_repository.cpp  user_repository.cpp
src/repositories/include/: inventory_repository.h  product_repository.h  stock_movement_repository.h  user_repository.h
src/service/: inventory_service.cpp  product_service.cpp  stock_movement_service.cpp  user_service.cpp
src/service/include/: inventory_service.h  product_service.h  stock_movement_service.h  user_service.h
src/ui/: console_utils.cpp  mainloop.cpp  mainloop.h
src/ui/auth/: login.cpp  login.h  session_view.cpp  session_view.h
src/ui/include/: console_utils.h
